# secret-santa

./: .gitignore  README.md  pyproject.toml
src/secret_santa/: __init__.py  __main__.py  draw.py  email.py
tests/unit/: test_draw.py
