[project]
name = "secret-santa"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ivan Perdomo", email = "iperdomo2016@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-repeat>=0.9.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/secret_santa"]

[project.scripts]
secret_santa = "secret_santa.__main__:main"
